added admin page and shortcode

--- a/assets/src/css/admin.css
+++ b/assets/src/css/admin.css
@@ -9,43 +9,6 @@
 	margin: 10px 40px 30px;
 }
 
-body.frm-white-body {
-	background: #fff;
-}
-
-.frm-white-body #wpcontent {
-	padding-left: 0;
-	padding-right: 0;
-}
-
-.frm-white-body .wrap #post-body {
-	padding: 0 20px;
-}
-
-.frm-white-body table.widefat {
-	background: var(--lightest-grey);
-	border-width: 0;
-	box-shadow: none;
-	margin: 20px 0;
-}
-
-.frm-white-body table.widefat tfoot,
-.frm-white-body table.widefat thead {
-	background: #fff;
-}
-
-.frm-white-body table.widefat th {
-	font-size: 16px;
-}
-
-.frm-white-body table.frm-border td {
-	font-size: 14px;
-}
-
-.frm-white-body .striped > tbody > :nth-child(odd) {
-	background-color: #fff;
-}
-
 #frm_top_bar {
 	display: block;
 	width: 100%;
@@ -69,8 +32,7 @@ body.frm-white-body {
 	max-width: 100%;
 }
 
-.frm-header-logo,
-.edit-php.post-type-frm_display .frm-header-logo {
+.frm-header-logo{
 	float: left;
 	margin: 0 15px 0 0;
 }
@@ -99,20 +61,6 @@ h1 .frm-button-primary {
 	line-height: 23px !important;
 	vertical-align: text-bottom !important;
 	height: auto !important;
-}
-
-.frm-white-body .button-primary {
-	text-shadow: none;
-	box-shadow: none;
-	border-radius: 30px;
-	border-color: var(--primary-color);
-	font-size: 1em;
-	transition: all .2s ease;
-	padding: 0 15px;
-	height: 28px;
-	min-height: 28px;
-	outline: none;
-	line-height: 26px;
 }
 
 .frm-button-primary {
